parser.output
   0  $accept : %entry% $end

   1  dtype : INT
   2        | DOUBLE
   3        | STRING
   4        | BOOL
   5        | MAT

   6  var_dec_def : dtype ID SEMI
   7              | dtype ID ASSIGN expr SEMI

   8  var_dec_def_list :
   9                   | var_dec_def_list var_dec_def

  10  arg_def_list : dtype ID
  11               | dtype
  12               | arg_def_list COMMA dtype ID
  13               | arg_def_list COMMA dtype

  14  func_def : DEF dtype ID LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED
  15           | DEF ID LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED

  16  func_def_list : func_def
  17                | func_def_list func_def

  18  elif_list :
  19            | elif_list ELIF expr THEN stmt_list

  20  else_stmt :
  21            | ELSE stmt_list

  22  mat_literal : LBRACE RBRACE
  23              | LBRACE mat_rows RBRACE

  24  mat_rows : mat_row
  25           | mat_rows SEMI mat_row

  26  mat_row : expr
  27          | mat_row COMMA expr

  28  expr : BOOL_LITERAL
  29       | INT_LITERAL
  30       | DOUBLE_LITERAL
  31       | STRING_LITERAL
  32       | mat_literal
  33       | ID
  34       | ID LSBRACK expr COMMA expr RSBRACK
  35       | expr PLUS expr
  36       | expr MINUS expr
  37       | expr TIMES expr
  38       | expr DIVIDE expr
  39       | expr EQ expr
  40       | expr NEQ expr
  41       | expr LT expr
  42       | expr LEQ expr
  43       | expr GT expr
  44       | expr GEQ expr
  45       | expr AND expr
  46       | expr OR expr
  47       | ID ASSIGN expr
  48       | NOT expr
  49       | MINUS expr
  50       | ID LPAREN arg_call_list RPAREN
  51       | LPAREN expr RPAREN

  52  arg_call_list :
  53                | arg_call_list COMMA expr

  54  stmt_list :
  55            | stmt_list stmt

  56  stmt : expr SEMI
  57       | RETURN expr SEMI
  58       | IF expr THEN stmt_list elif_list else_stmt FI
  59       | FOR ID IN expr DO stmt_list ROF
  60       | FOR expr DO stmt_list ROF
  61       | DISP expr SEMI
  62       | CONTINUE SEMI
  63       | BREAK SEMI

  64  program : func_def_list var_dec_def_list stmt_list
  65          | var_dec_def_list stmt_list

  66  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (66)
	var_dec_def_list : .  (8)

	DEF  shift 3
	$end  reduce 8
	LPAREN  reduce 8
	LBRACE  reduce 8
	MINUS  reduce 8
	IF  reduce 8
	FOR  reduce 8
	RETURN  reduce 8
	BREAK  reduce 8
	CONTINUE  reduce 8
	DISP  reduce 8
	NOT  reduce 8
	INT  reduce 8
	DOUBLE  reduce 8
	STRING  reduce 8
	BOOL  reduce 8
	MAT  reduce 8
	ID  reduce 8
	BOOL_LITERAL  reduce 8
	INT_LITERAL  reduce 8
	DOUBLE_LITERAL  reduce 8
	STRING_LITERAL  reduce 8

	program  goto 4
	var_dec_def_list  goto 5
	func_def  goto 6
	func_def_list  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	func_def : DEF . dtype ID LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (14)
	func_def : DEF . ID LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (15)

	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	BOOL  shift 11
	MAT  shift 12
	ID  shift 13
	.  error

	dtype  goto 14


state 4
	%entry% : '\001' program .  (66)

	.  reduce 66


state 5
	var_dec_def_list : var_dec_def_list . var_dec_def  (9)
	program : var_dec_def_list . stmt_list  (65)
	stmt_list : .  (54)

	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	BOOL  shift 11
	MAT  shift 12
	$end  reduce 54
	LPAREN  reduce 54
	LBRACE  reduce 54
	MINUS  reduce 54
	IF  reduce 54
	FOR  reduce 54
	RETURN  reduce 54
	BREAK  reduce 54
	CONTINUE  reduce 54
	DISP  reduce 54
	NOT  reduce 54
	ID  reduce 54
	BOOL_LITERAL  reduce 54
	INT_LITERAL  reduce 54
	DOUBLE_LITERAL  reduce 54
	STRING_LITERAL  reduce 54

	dtype  goto 15
	var_dec_def  goto 16
	stmt_list  goto 17


state 6
	func_def_list : func_def .  (16)

	.  reduce 16


state 7
	func_def_list : func_def_list . func_def  (17)
	program : func_def_list . var_dec_def_list stmt_list  (64)
	var_dec_def_list : .  (8)

	DEF  shift 3
	$end  reduce 8
	LPAREN  reduce 8
	LBRACE  reduce 8
	MINUS  reduce 8
	IF  reduce 8
	FOR  reduce 8
	RETURN  reduce 8
	BREAK  reduce 8
	CONTINUE  reduce 8
	DISP  reduce 8
	NOT  reduce 8
	INT  reduce 8
	DOUBLE  reduce 8
	STRING  reduce 8
	BOOL  reduce 8
	MAT  reduce 8
	ID  reduce 8
	BOOL_LITERAL  reduce 8
	INT_LITERAL  reduce 8
	DOUBLE_LITERAL  reduce 8
	STRING_LITERAL  reduce 8

	var_dec_def_list  goto 18
	func_def  goto 19


state 8
	dtype : INT .  (1)

	.  reduce 1


state 9
	dtype : DOUBLE .  (2)

	.  reduce 2


state 10
	dtype : STRING .  (3)

	.  reduce 3


state 11
	dtype : BOOL .  (4)

	.  reduce 4


state 12
	dtype : MAT .  (5)

	.  reduce 5


state 13
	func_def : DEF ID . LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (15)

	LPAREN  shift 20
	.  error


state 14
	func_def : DEF dtype . ID LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (14)

	ID  shift 21
	.  error


state 15
	var_dec_def : dtype . ID SEMI  (6)
	var_dec_def : dtype . ID ASSIGN expr SEMI  (7)

	ID  shift 22
	.  error


state 16
	var_dec_def_list : var_dec_def_list var_dec_def .  (9)

	.  reduce 9


state 17
	stmt_list : stmt_list . stmt  (55)
	program : var_dec_def_list stmt_list .  (65)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	IF  shift 26
	FOR  shift 27
	RETURN  shift 28
	BREAK  shift 29
	CONTINUE  shift 30
	DISP  shift 31
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	$end  reduce 65

	expr  goto 38
	mat_literal  goto 39
	stmt  goto 40


state 18
	var_dec_def_list : var_dec_def_list . var_dec_def  (9)
	program : func_def_list var_dec_def_list . stmt_list  (64)
	stmt_list : .  (54)

	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	BOOL  shift 11
	MAT  shift 12
	$end  reduce 54
	LPAREN  reduce 54
	LBRACE  reduce 54
	MINUS  reduce 54
	IF  reduce 54
	FOR  reduce 54
	RETURN  reduce 54
	BREAK  reduce 54
	CONTINUE  reduce 54
	DISP  reduce 54
	NOT  reduce 54
	ID  reduce 54
	BOOL_LITERAL  reduce 54
	INT_LITERAL  reduce 54
	DOUBLE_LITERAL  reduce 54
	STRING_LITERAL  reduce 54

	dtype  goto 15
	var_dec_def  goto 16
	stmt_list  goto 41


state 19
	func_def_list : func_def_list func_def .  (17)

	.  reduce 17


state 20
	func_def : DEF ID LPAREN . arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (15)

	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	BOOL  shift 11
	MAT  shift 12
	.  error

	dtype  goto 42
	arg_def_list  goto 43


state 21
	func_def : DEF dtype ID . LPAREN arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (14)

	LPAREN  shift 44
	.  error


state 22
	var_dec_def : dtype ID . SEMI  (6)
	var_dec_def : dtype ID . ASSIGN expr SEMI  (7)

	SEMI  shift 45
	ASSIGN  shift 46
	.  error


state 23
	expr : LPAREN . expr RPAREN  (51)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 47
	mat_literal  goto 39


state 24
	mat_literal : LBRACE . RBRACE  (22)
	mat_literal : LBRACE . mat_rows RBRACE  (23)

	LPAREN  shift 23
	LBRACE  shift 24
	RBRACE  shift 48
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 49
	mat_literal  goto 39
	mat_rows  goto 50
	mat_row  goto 51


state 25
	expr : MINUS . expr  (49)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 52
	mat_literal  goto 39


state 26
	stmt : IF . expr THEN stmt_list elif_list else_stmt FI  (58)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 53
	mat_literal  goto 39


state 27
	stmt : FOR . ID IN expr DO stmt_list ROF  (59)
	stmt : FOR . expr DO stmt_list ROF  (60)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 54
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 55
	mat_literal  goto 39


state 28
	stmt : RETURN . expr SEMI  (57)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 56
	mat_literal  goto 39


state 29
	stmt : BREAK . SEMI  (63)

	SEMI  shift 57
	.  error


state 30
	stmt : CONTINUE . SEMI  (62)

	SEMI  shift 58
	.  error


state 31
	stmt : DISP . expr SEMI  (61)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 59
	mat_literal  goto 39


state 32
	expr : NOT . expr  (48)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 60
	mat_literal  goto 39


state 33
	expr : ID .  (33)
	expr : ID . LSBRACK expr COMMA expr RSBRACK  (34)
	expr : ID . ASSIGN expr  (47)
	expr : ID . LPAREN arg_call_list RPAREN  (50)

	LPAREN  shift 61
	LSBRACK  shift 62
	ASSIGN  shift 63
	RPAREN  reduce 33
	RSBRACK  reduce 33
	RBRACE  reduce 33
	SEMI  reduce 33
	COMMA  reduce 33
	PLUS  reduce 33
	MINUS  reduce 33
	TIMES  reduce 33
	DIVIDE  reduce 33
	THEN  reduce 33
	DO  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	LT  reduce 33
	LEQ  reduce 33
	GT  reduce 33
	GEQ  reduce 33
	AND  reduce 33
	OR  reduce 33


state 34
	expr : BOOL_LITERAL .  (28)

	.  reduce 28


state 35
	expr : INT_LITERAL .  (29)

	.  reduce 29


state 36
	expr : DOUBLE_LITERAL .  (30)

	.  reduce 30


state 37
	expr : STRING_LITERAL .  (31)

	.  reduce 31


state 38
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	stmt : expr . SEMI  (56)

	SEMI  shift 64
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 39
	expr : mat_literal .  (32)

	.  reduce 32


state 40
	stmt_list : stmt_list stmt .  (55)

	.  reduce 55


state 41
	stmt_list : stmt_list . stmt  (55)
	program : func_def_list var_dec_def_list stmt_list .  (64)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	IF  shift 26
	FOR  shift 27
	RETURN  shift 28
	BREAK  shift 29
	CONTINUE  shift 30
	DISP  shift 31
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	$end  reduce 64

	expr  goto 38
	mat_literal  goto 39
	stmt  goto 40


state 42
	arg_def_list : dtype . ID  (10)
	arg_def_list : dtype .  (11)

	ID  shift 77
	RPAREN  reduce 11
	COMMA  reduce 11


state 43
	arg_def_list : arg_def_list . COMMA dtype ID  (12)
	arg_def_list : arg_def_list . COMMA dtype  (13)
	func_def : DEF ID LPAREN arg_def_list . RPAREN DO var_dec_def_list stmt_list FED  (15)

	RPAREN  shift 78
	COMMA  shift 79
	.  error


state 44
	func_def : DEF dtype ID LPAREN . arg_def_list RPAREN DO var_dec_def_list stmt_list FED  (14)

	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	BOOL  shift 11
	MAT  shift 12
	.  error

	dtype  goto 42
	arg_def_list  goto 80


state 45
	var_dec_def : dtype ID SEMI .  (6)

	.  reduce 6


state 46
	var_dec_def : dtype ID ASSIGN . expr SEMI  (7)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 81
	mat_literal  goto 39


state 47
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	expr : LPAREN expr . RPAREN  (51)

	RPAREN  shift 82
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 48
	mat_literal : LBRACE RBRACE .  (22)

	.  reduce 22


state 49
	mat_row : expr .  (26)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	RBRACE  reduce 26
	SEMI  reduce 26
	COMMA  reduce 26


state 50
	mat_literal : LBRACE mat_rows . RBRACE  (23)
	mat_rows : mat_rows . SEMI mat_row  (25)

	RBRACE  shift 83
	SEMI  shift 84
	.  error


state 51
	mat_rows : mat_row .  (24)
	mat_row : mat_row . COMMA expr  (27)

	COMMA  shift 85
	RBRACE  reduce 24
	SEMI  reduce 24


state 52
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	expr : MINUS expr .  (49)

	.  reduce 49


state 53
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	stmt : IF expr . THEN stmt_list elif_list else_stmt FI  (58)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	THEN  shift 86
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 54
	expr : ID .  (33)
	expr : ID . LSBRACK expr COMMA expr RSBRACK  (34)
	expr : ID . ASSIGN expr  (47)
	expr : ID . LPAREN arg_call_list RPAREN  (50)
	stmt : FOR ID . IN expr DO stmt_list ROF  (59)

	LPAREN  shift 61
	LSBRACK  shift 62
	ASSIGN  shift 63
	IN  shift 87
	PLUS  reduce 33
	MINUS  reduce 33
	TIMES  reduce 33
	DIVIDE  reduce 33
	DO  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	LT  reduce 33
	LEQ  reduce 33
	GT  reduce 33
	GEQ  reduce 33
	AND  reduce 33
	OR  reduce 33


state 55
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	stmt : FOR expr . DO stmt_list ROF  (60)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	DO  shift 88
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 56
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	stmt : RETURN expr . SEMI  (57)

	SEMI  shift 89
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 57
	stmt : BREAK SEMI .  (63)

	.  reduce 63


state 58
	stmt : CONTINUE SEMI .  (62)

	.  reduce 62


state 59
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	stmt : DISP expr . SEMI  (61)

	SEMI  shift 90
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 60
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LEQ expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GEQ expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	expr : NOT expr .  (48)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	RPAREN  reduce 48
	RSBRACK  reduce 48
	RBRACE  reduce 48
	SEMI  reduce 48
	COMMA  reduce 48
	THEN  reduce 48
	DO  reduce 48
	AND  reduce 48
	OR  reduce 48


state 61
	expr : ID LPAREN . arg_call_list RPAREN  (50)
	arg_call_list : .  (52)

	.  reduce 52

	arg_call_list  goto 91


state 62
	expr : ID LSBRACK . expr COMMA expr RSBRACK  (34)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 92
	mat_literal  goto 39


state 63
	expr : ID ASSIGN . expr  (47)

	LPAREN  shift 23
	LBRACE  shift 24
	MINUS  shift 25
	NOT  shift 32
	ID  shift 33
	BOOL_LITERAL  shift 34
	INT_LITERAL  shift 35
	DOUBLE_LITERAL  shift 36
	STRING_LITERAL  shift 37
	.  error

	expr  goto 93
	mat_literal  goto 39


state 64
	stmt : expr SEMI .  (56)

	.  reduce 56


state 65
	expr : expr PLUS . expr  (35)
